Fixed overflow error with css3 calc function. (#17)
https://developer.mozilla.org/en-US/docs/Web/CSS/calc

--- a/tool/src/webapp/css/commons.css
+++ b/tool/src/webapp/css/commons.css
@@ -128,6 +128,7 @@
             display: inline-block;
             padding-left: 10px;
             padding-right: 10px;
+            width: calc(100% - 36px);
         }
             .commons-comment-content {
                 white-space: normal;
